# i.mobilothon_Volkswagen_team_manusmriti

./: README.md  S2_wellness_monitor.md  architecture.md
doc/: Main_dashboard.md  README.md  S2_wellness_monitor.md  S3_emergency_protocol.md  S4_Copilot.md  api_reference.md  architecture.md  implementation.md  installation.md  process_flow.md  testing.md
src/backend/: app.py
src/carla/: .gitignore  app.py  car_opening.py  carla_driver_monitor.py  crash_anomaly.py  driving_pattern_detection.py  driving_pattern_log.csv  drowsiness_fatigue.py  emotion_log.txt  face_detection.py  get_photos.py  head_pose_analysis.py  head_pose_analysis_2.py  head_pose_analysis_3.py  pyproject.toml  requirements.txt  test2.py  test_crash.py  test_n.py  test_p.py  traffic_analysis.py  voice_assistant.py
src/frontend/: .gitignore
src/frontend/sample_website/: README.md
src/frontend/website/: package.json
